feat(metric): add nodejs active resources metric
